<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="accionRapido">Quick Access</string>
    <string name="afirmar">Yes</string>
    <string name="afluencia">Customer Influx</string>
    <string name="app_name">Stylo</string>
    <string name="añadirCita">ADD APPOINTMENT</string>
    <string name="bienvenida_nombre">Welcome, %s</string>
    <string name="buscarCita">SEARCH APPOINTMENT</string>
    <string name="cambiar_idioma">Change Language</string>
    <string name="cambiar_password">Change Password</string>
    <string name="cancelar" tools:ignore="ButtonCase">CANCEL</string>
    <string name="cerrar">Close</string>
    <string name="cerrar_sesion">Log Out</string>
    <string name="citaActualizado">The appointment is updated</string>
    <string name="citaConfirmada">Appointment accepted</string>
    <string name="citaFinalizada">The appointment has finished</string>
    <string name="cita_cancelada">Booking successfully cancelled</string>
    <string name="cita_pasada">You cannot book an appointment in the past</string>
    <string name="cita_programada">You have a scheduled appointment</string>
    <string name="cita_proxima">Upcoming Appointment</string>
    <string name="cita_reservada">Booked appointment</string>
    <string name="citas">Appointments</string>
    <string name="citas_vacio">NO APPOINTMENT FOR TODAY</string>
    <string name="cliente">SEARCH CUSTOMERS</string>
    <string name="clientes">Customers</string>
    <string name="cliente_actualizado">Actualized customer</string>
    <string name="cliente_creado">Customer created and email send</string>
    <string name="cliente_eliminado">Customer deleted</string>
    <string name="cliente_nuevo">NEW CUSTOMER</string>
    <string name="confirmar_cancelacion">Are you sure you want to cancel this booking?</string>
    <string name="contraseña_actual">ACTUAL PASSWORD:</string>
    <string name="contraseña_estilista">Your Password</string>
    <string name="credenciales_guardadas">There isn\'t saved credentials</string>
    <string name="datos_acceso">Access Data</string>
    <string name="datos_personales">Personal Data</string>
    <string name="detalle_cliente">DETAIL CUSTOMER</string>
    <string name="editar">EDIT</string>
    <string name="editarCliente">EDIT CUSTOMER</string>
    <string name="editar_perfil">Edit Profile</string>
    <string name="eliminar">DELETE</string>
    <string name="eliminar_cliente">¿Delete Customer?</string>
    <string name="eliminar_mensaje">This action cannot be undone. ¿Are you sure?</string>
    <string name="email">EMAIL:</string>
    <string name="email_estilista">Your Email</string>
    <string name="email_param">EMAIL: %1$s</string>
    <string name="email_valido">Enter a valid email</string>
    <string name="enter">ENTER</string>
    <string name="error">Session email not found</string>
    <string name="errorLogin">Unknown error</string>
    <string name="errorLoginCamposVacios">Please, enter all the fields</string>
    <string name="error_campos_obligatorios">Please fill all fields</string>
    <string name="error_cita_mismo_dia">The customer has an appointment that day</string>
    <string name="error_cliente_telefono">There is a customer with that telephone</string>
    <string name="error_crear_cliente">Error creating customer</string>
    <string name="error_guardar_perfil">Error saving profile data</string>
    <string name="error_nombre_perfil">Profile name not found</string>
    <string name="error_pass_corta">Password must be at least 6 characters</string>
    <string name="error_registro_general">Registration error: %1$s</string>
    <string name="error_sesion_invalida">The user has not entered the credentials correctly</string>
    <string name="escribir_contraseña">Write your password to confirm your personal data</string>
    <string name="estado">STATUS</string>
    <string name="estilistaOcupado">The stylist is occupied</string>
    <string name="estilista_param">Stylist: %1$s</string>
    <string name="fecha">SELECT DATE</string>
    <string name="fechaDef">DATE</string>
    <string name="fecha_param">Day: %1$s</string>
    <string name="finalizarCita">Is the appointment finished?</string>
    <string name="guardar">SAVE CUSTOMER</string>
    <string name="guardar_usuario">SAVE USER</string>
    <string name="historial">HISTORY</string>
    <string name="home">Home</string>
    <string name="hora">SELECT TIME</string>
    <string name="horaDef">TIME</string>
    <string name="horario">Opening hours until 8:00 PM</string>
    <string name="horarioHasta">Scheduled: 9:00 to 20:00</string>
    <string name="hora_elegida">Please, select an hour between 9AM and 8PM</string>
    <string name="hora_reservada">Sorry, that hour is occupied</string>
    <string name="inicio">Welcome</string>
    <string name="label_cliente">CUSTOMER</string>
    <string name="label_estilista">STYLIST</string>
    <string name="label_nombre">CUSTOMER:</string>
    <string name="label_nombre_param">CUSTOMER: %1$s</string>
    <string name="label_realizado_por">Attended by</string>
    <string name="label_telefono_param">TELEPHONE: %1$s</string>
    <string name="language">EN</string>
    <string name="link_registrate">Sign up</string>
    <string name="login">LOGIN</string>
    <string name="loginPassword">PASSWORD</string>
    <string name="loginUser">EMAIL</string>
    <string name="login_biometrico_subtitulo">Use your fingerprint to log in quickly</string>
    <string name="login_biometrico_titulo">Biometric Login</string>
    <string name="login_no_cuenta">Don\'t have an account? Sign up</string>
    <string name="menu_cambiar_idioma">Change Language</string>
    <string name="menu_cambiar_pass">Change Password</string>
    <string name="menu_logout">Log Out</string>
    <string name="negar">No</string>
    <string name="noCitas">There is no scheduled appointments</string>
    <string name="noClientes">There is no saved clients</string>
    <string name="noExisteCliente">The customer does not exist</string>
    <string name="nombre_cliente">CUSTOMER NAME</string>
    <string name="nombre_estilista">Your Name</string>
    <string name="notas">NOTES:</string>
    <string name="notas_param">NOTES: %1$s</string>
    <string name="notif_recordatorio_detalle">You have an appointment for %1$s at %2$s</string>
    <string name="notif_recordatorio_titulo">Appointment Reminder</string>
    <string name="nuevaCita">NEW APPOINTMENT</string>
    <string name="nuevaContraseña"> NEW PASSWORD:</string>
    <string name="nueva_reserva">Book Now</string>
    <string name="nuevoCliente">NEW CUSTOMER</string>
    <string name="nuevo_usuario">NEW USER</string>
    <string name="opcion_cancelar">Cancel booking</string>
    <string name="opcion_editar">Change date/time</string>
    <string name="pais">Country</string>
    <string name="perfil">Profile</string>
    <string name="proximasCitas">Next Appointments</string>
    <string name="recuperarCuenta">Forgot Password?</string>
    <string name="registrerUser">NAME</string>
    <string name="reservas">My Appointments</string>
    <string name="saludar">HELLO!</string>
    <string name="selecciona_idioma">Select your language</string>
    <string name="seleccionar_estilista">Select a stylist</string>
    <string name="seleccionar_servicio">Select a service</string>
    <string name="send">Send</string>
    <string name="servicio">SERVICE</string>
    <string name="servicio_barba">Beard</string>
    <string name="servicio_corte">Haircut</string>
    <string name="servicio_param">Service: %1$s</string>
    <string name="servicio_peinado">Hairstyle</string>
    <string name="servicio_tinte">Dye</string>
    <string name="sin_citas_historial">This customer has no recorded appointments</string>
    <string name="sin_resultados_busqueda">No customers matching were found with \"%s\"</string>
    <string name="sin_resultados_busqueda_citas">No appointments matching were found with \"%s\"</string>
    <string name="telefono">TELEPHONE:</string>
    <string name="titulo_gestion_cita">Manage my Booking</string>
    <string name="toast_cita_con">Appointment with: %1$s</string>
    <string name="toast_recuperacion_enviado">Recovery email sent to %1$s</string>
    <string name="ultimoDia">LAST APPOINTMENT</string>
</resources>