<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    app:cardCornerRadius="25dp"
    app:cardElevation="8dp"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="center">

        <TextView
            android:id="@+id/tvTituloCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opcion_cancelar"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/gris_oscuro_fondo" />

        <TextView
            android:id="@+id/tvMensajeCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/confirmar_cancelacion"
            android:textAlignment="center"
            android:textColor="@color/gris_oscuro_fondo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnNoCancelar"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="6dp"
                android:text="@string/cancelar"
                app:cornerRadius="12dp" />

            <Button
                android:id="@+id/btnSiCancelar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="6dp"
                android:backgroundTint="@android:color/holo_red_dark"
                android:text="@string/eliminar"
                android:textColor="@android:color/white"
                app:cornerRadius="12dp" />
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>