<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:cardCornerRadius="25dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="24dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:text="@string/editar_perfil"
                    android:textColor="@color/gris_oscuro_fondo"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:text="@string/datos_personales"
                    android:textColor="@color/gris_oscuro_fondo"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:text="@string/nombre_estilista"
                    android:textColor="@color/gris_oscuro_fondo"
                    android:textSize="12sp"
                    android:textStyle="italic" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginBottom="24dp"
                    app:cardBackgroundColor="@android:color/transparent"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="0dp"
                    app:strokeColor="@color/gris_oscuro_fondo"
                    app:strokeWidth="1dp">

                    <EditText
                        android:id="@+id/etNombreEditar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:hint="@string/label_nombre"
                        android:paddingHorizontal="16dp"
                        android:textSize="15sp"
                        android:textColor="@color/gris_oscuro_fondo"
                        android:textColorHint="@color/gris_oscuro_fondo" />
                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:text="@string/datos_acceso"
                    android:textColor="@color/gris_oscuro_fondo"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:text="@string/email_estilista"
                    android:textColor="@color/gris_oscuro_fondo"
                    android:textSize="12sp"
                    android:textStyle="italic" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginBottom="16dp"
                    app:cardBackgroundColor="@android:color/transparent"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="0dp"
                    app:strokeColor="@color/gris_oscuro_fondo"
                    app:strokeWidth="1dp">

                    <EditText
                        android:id="@+id/etEmailEditar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:paddingHorizontal="16dp"
                        android:textSize="15sp"
                        android:textColor="@color/gris_oscuro_fondo"
                        android:textColorHint="@color/gris_oscuro_fondo" />
                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:text="@string/contraseña_estilista"
                    android:textColor="@color/gris_oscuro_fondo"
                    android:textSize="12sp"
                    android:textStyle="italic" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginBottom="16dp"
                    app:cardBackgroundColor="@android:color/transparent"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="0dp"
                    app:strokeColor="@color/gris_oscuro_fondo"
                    app:strokeWidth="1dp">

                    <EditText
                        android:id="@+id/etPassActual"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:hint="@string/contraseña_actual"
                        android:inputType="textPassword"
                        android:paddingHorizontal="16dp"
                        android:textSize="15sp"
                        android:textColor="@color/gris_oscuro_fondo"
                        android:textColorHint="@color/gris_oscuro_fondo" />
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginBottom="32dp"
                    app:cardBackgroundColor="@android:color/transparent"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="0dp"
                    app:strokeColor="@color/gris_oscuro_fondo"
                    app:strokeWidth="1dp">

                    <EditText
                        android:id="@+id/etPassNueva"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:hint="@string/nuevaContraseña"
                        android:inputType="textPassword"
                        android:paddingHorizontal="16dp"
                        android:textSize="15sp"
                        android:textColor="@color/gris_oscuro_fondo"
                        android:textColorHint="@color/gris_oscuro_fondo"/>
                </com.google.android.material.card.MaterialCardView>

                <Button
                    android:id="@+id/btnGuardarPerfil"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:text="@string/guardar_usuario"
                    android:textAllCaps="false"
                    android:textColor="@color/gris_oscuro_fondo"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:cornerRadius="12dp" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</ScrollView>