<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/windowBackground">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/tvTitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:text="@string/reservas"
                android:textColor="@color/gris_oscuro_fondo"
                android:textSize="26sp"
                android:textStyle="bold|italic" />

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="400dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvTituloPendientes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/proximasCitas"
                        android:textColor="@color/gris_oscuro_fondo"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_marginBottom="8dp"
                        android:visibility="gone"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvCitasPendientes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:nestedScrollingEnabled="false" />

                    <TextView
                        android:id="@+id/tvTituloFinalizadas"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/historial"
                        android:textColor="@color/gris_oscuro_fondo"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="8dp"
                        android:visibility="gone"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvCitasFinalizadas"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:nestedScrollingEnabled="false" />

                    <TextView
                        android:id="@+id/tvSinCitas"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:padding="20dp"
                        android:text="@string/noCitas"
                        android:textColor="@color/gris_oscuro_fondo"
                        android:textSize="16sp"
                        android:textStyle="italic"
                        android:visibility="gone" />

                </LinearLayout>
            </androidx.core.widget.NestedScrollView>

            <Button
                android:id="@+id/btnVolverReservar"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="16dp"
                android:text="@string/nueva_reserva"
                android:textColor="@color/gris_oscuro_fondo"
                app:cornerRadius="15dp"
                app:icon="@drawable/ic_calendar" />

            <Button
                android:id="@+id/btnCerrarSesion"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/cerrar_sesion"
                android:textColor="#FF5252"
                android:textSize="12sp" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>
